--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <!-- Jumbotron end -->
 
 <!-- Speaker -->
-    <section class="py-5 my-4 text-center">
+    <section class="py-5 text-center">
         <h2>The Speakers</h2>
         <p> Write a few lines about the event speakers to highlight their expertise in the field.</p>
     </section>
 <!-- Speaker end -->
 
 <!-- Cards -->
-<div class="card-deck d-flex">
-    <div class="card col-3">
+<div class="container-fluid px-4 d-flex">
+    <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -38,7 +38,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
-    <div class="card col-3">
+    <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -46,7 +46,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
-    <div class="card col-3">
+    <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -54,7 +54,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
-    <div class="card col-3">
+    <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -63,6 +63,15 @@
         </div>
     </div>
   </div>
+<!-- Cards end -->
+
+<!-- Buy section -->
+<section class="py-5 my-4 text-center">
+    <h1 class="display-4 fw-bold">Get Your Ticket Today!</h1>
+    <p class="my-5">Each ticket includes: <strong>20</strong> speakers, <strong>1000</strong> participants, <strong>15</strong> sessions, <strong>5</strong> keynotes</p>
+    <button class="btn btn-dark btn-lg px-4 py-3 mt-3 text text-uppercase fw-bold buy-button" type="button">Buy Ticket $149</button>
+</section>
+<!-- Buy end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
