--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="https://placeholder.pics/svg/150x50/888888/EEE/Logo" alt="..." height="36">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav text-dark fw-bold ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Speakers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark fw-bold" href="#">Tickets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark fw-bold" href="#">Venue</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
     <!-- Jumbotron -->
     <div class="container py-4 text-center">
         <div class="p-5 mb-4 bg-jumbotron">
