--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Event Landing Page</title>
   </head>
   <body>
-    <!-- nav bar -->
+<!-- nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
           <a class="navbar-brand" href="#">
@@ -33,14 +33,15 @@
           </div>
         </div>
     </nav>
+<!-- nav bar end -->
 
-    <!-- Jumbotron -->
+<!-- Jumbotron -->
     <div class="container py-4 text-center">
         <div class="p-5 mb-4 bg-jumbotron">
             <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Clear Statemnet about Your Event</h1>
-                <h3 class="fs-5 my-4 fw-light">Seconday header providing additional information</h3>
-                <button class="btn btn-dark btn-lg px-5 mt-4 text-uppercase fw-bold" type="button">Get the ticket</button>
+                <h1 class="display-5 fw-bold">Clear Statement about Your Event</h1>
+                <h3 class="fs-5 my-4 text-secondary fw-light">Seconday header providing additional information</h3>
+                <button class="btn btn-dark btn-sm p-3 mt-4 text-uppercase fw-bold" type="button">Get the ticket</button>
             </div>
         </div>
     </div>
@@ -48,8 +49,8 @@
 
 <!-- Speaker -->
     <section class="py-5 text-center">
-        <h2>The Speakers</h2>
-        <p> Write a few lines about the event speakers to highlight their expertise in the field.</p>
+        <h2 class="fw-bold">The Speakers</h2>
+        <p class="fw-bold my-4"> Write a few lines about the event speakers to highlight their expertise in the field.</p>
     </section>
 <!-- Speaker end -->
 
@@ -58,33 +59,33 @@
     <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title fw-bold">Ruby Jennings</h5>
+        <p class="card-text text-secondary">Product Manager at Moqups. Runner, parent and coffe lover.</p>
+        <p class="card-text"><small class="text-muted text-secondary">@username</small></p>
         </div>
     </div>
     <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title fw-bold">Leon Hanson</h5>
+        <p class="card-text text-secondary">Sales Manager at Moqups. Runner, parent and coffe lover.</p>
+        <p class="card-text"><small class="text-muted text-secondary">@username</small></p>
         </div>
     </div>
     <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title fw-bold">Meghan Stone</h5>
+        <p class="card-text text-secondary">Marketing Specialist at Moqups. Runner, parent and coffe lover.</p>
+        <p class="card-text"><small class="text-muted text-secondary">@username</small></p>
         </div>
     </div>
     <div class="card-deck col-3">
         <img class="card-img-top" src="./img/affd16fd5264cab9197da4cd1a996f820e601ee4.png" alt="Card image cap">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title fw-bold">Willie Perkins</h5>
+        <p class="card-text text-secondary">UX Engineer at Moqups. Runner, parent and coffe lover.</p>
+        <p class="card-text"><small class="text-muted text-secondary">@username</small></p>
         </div>
     </div>
   </div>
@@ -93,8 +94,8 @@
 <!-- Buy section -->
 <section class="py-5 my-4 text-center">
     <h1 class="display-4 fw-bold">Get Your Ticket Today!</h1>
-    <p class="my-5">Each ticket includes: <strong>20</strong> speakers, <strong>1000</strong> participants, <strong>15</strong> sessions, <strong>5</strong> keynotes</p>
-    <button class="btn btn-dark btn-lg px-4 py-3 mt-3 text text-uppercase fw-bold buy-button" type="button">Buy Ticket $149</button>
+    <p class="my-5 text-secondary">Each ticket includes: <strong>20</strong> speakers, <strong>1000</strong> participants, <strong>15</strong> sessions, <strong>5</strong> keynotes</p>
+    <button class="btn btn-dark btn-sm px-4 py-3 mt-3 text-uppercase fw-bold buy-button" type="button">Buy Ticket $149</button>
 </section>
 <!-- Buy end -->
 
